--- a/app/src/main/res/layout/fragment_register_panel.xml
+++ b/app/src/main/res/layout/fragment_register_panel.xml
@@ -51,6 +51,7 @@
             android:id="@+id/appRegisterEmailText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:textColor="@color/white"
             android:background="#00000000"/>
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -81,6 +82,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="textPassword"
+            android:textColor="@color/white"
             android:background="#00000000"/>
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -111,6 +113,7 @@
             android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:textColor="@color/white"
             android:background="#00000000"/>
 
     </com.google.android.material.textfield.TextInputLayout>
