--- a/app/src/main/res/layout/game_item.xml
+++ b/app/src/main/res/layout/game_item.xml
@@ -50,5 +50,12 @@
             android:textColor="@color/white"
             android:textAlignment="center"
             />
+
+        <TextView
+            android:layout_height="35dp"
+            android:layout_width="match_parent"
+            android:id="@+id/gameId"
+            android:textColor="@color/darkgray"
+            />
     </LinearLayout>
 </LinearLayout>
