--- a/app/src/main/res/layout/fragment_main_list_fragment.xml
+++ b/app/src/main/res/layout/fragment_main_list_fragment.xml
@@ -52,6 +52,7 @@
             android:textSize="21sp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:textColor="@color/white"
             android:background="#00000000"/>
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -66,12 +67,14 @@
         android:layout_marginHorizontal="20dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/libraryGameList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/appFindByName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        android:layout_marginVertical="20dp"
         />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
